--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -10,6 +10,7 @@ proc-macro = true
 proc-macro2 = "1.0"
 quote = "1.0"
 syn = { version = "1.0", features = ["full"] }
+heck = { version = "0.4", features = ["unicode"] }
 
 [dev-dependencies]
 sqlx = { version = "0.6", features = ["runtime-tokio-native-tls"] }
