--- a/examples/docker-compose.yaml
+++ b/examples/docker-compose.yaml
@@ -1,8 +1,20 @@
 version: '3'
 
 services:
+  app:
+    build:
+      context: .
+    tty: true
+    command: bash
+    working_dir: /app
+    volumes:
+      - ../:/app
+    depends_on:
+      - db
+
   db:
     image: postgres:15-alpine
+    tty: true
     command: postgres -c log_destination=stderr -c log_statement=all -c log_connections=on -c log_disconnections=on
     logging:
       options:
@@ -16,7 +28,7 @@ services:
       POSTGRES_DB: db
       PGSSLMODE: disable
     ports:
-      - '5433:5432'
+      - '5432:5432'
     volumes:
       - qjack-sample-data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
