--- a/examples/docker-compose.yaml
+++ b/examples/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   app:
     build:
       context: .
-    container_name: qjack-sample-app
+    container_name: qjack-example-app
     tty: true
     command: bash
     working_dir: /app
@@ -17,7 +17,7 @@ services:
 
   postgres:
     image: postgres:15-alpine
-    container_name: qjack-sample-postgres
+    container_name: qjack-example-postgres
     tty: true
     command: postgres -c log_destination=stderr -c log_statement=all -c log_connections=on -c log_disconnections=on
     logging:
@@ -25,7 +25,7 @@ services:
         max-size: '10k'
         max-file: '5'
     environment:
-      POSTGRES_USER: user
+      POSTGRES_USER: qjack
       POSTGRES_PASSWORD: password
       POSTGRES_PORT: 5432
       POSTGRES_DB: db
@@ -33,9 +33,10 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - qjack-sample-data:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - qjack-example-data:/var/lib/postgresql/data
+      # - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
 volumes:
-  qjack-sample-data:
+  qjack-example-data:
+    name: qjack-example-data
     driver: local
