--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ edition = "2021"
 sqlx = "0.6"
 futures-util = "0.3"
 qjack_macros = { version = "0.1.0", path = "macros" }
+# tokio = { optional=true, version = "1", default-feature = false, features = ["sync"] }
+# async-std = { optional=true, versino = "1" }
 
 
 [features]
