--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 members = [
     ".",
     "macros",
+
+    "sample"
 ]
 
 
@@ -15,13 +17,10 @@ edition = "2021"
 sqlx = "0.6"
 futures-util = "0.3"
 qjack_macros = { version = "0.1.0", path = "macros" }
-# tokio = { optional=true, version = "1", default-feature = false, features = ["sync"] }
-# async-std = { optional=true, versino = "1" }
 
 
 [features]
-# default = []
-default = ["rt_tokio", "db_postgres"]
+default = []
 
 rt_tokio = ["sqlx/runtime-tokio-native-tls"]
 rt_async-std = ["sqlx/runtime-async-std-native-tls"]
@@ -29,7 +28,3 @@ rt_async-std = ["sqlx/runtime-async-std-native-tls"]
 db_postgres = ["sqlx/postgres"]
 db_mysql = ["sqlx/mysql"]
 db_sqlite = ["sqlx/sqlite"]
-
-
-[dev-dependencies]
-tokio = { version = "1", features = ["macros"] }
