--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ name = "qjack"
 version = "0.1.2"
 edition = "2021"
 authors = ["kanarus <kanarus786@gmail.com>"]
-description = "ergonomic sqlx wrapper"
+description = "ergonomic sqlx wrapper for nightly Rust"
 documentation = "https://docs.rs/qjack/"
 homepage = "https://crates.io/crates/qjack"
 repository = "https://github.com/kana-rus/qjack"
