--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,8 @@ members = [
     "macros",
 
     # ↓ comment out before publishing
-    # "sample"
+    "sample"
 ]
-
 
 [package]
 name = "qjack"
@@ -22,19 +21,15 @@ keywords = ["database", "async", "postgres", "mysql", "sqlite"]
 categories = ["database", "asynchronous"]
 license = "MIT"
 
-
 [dependencies]
 sqlx = "0.6"
 futures-util = "0.3"
 qjack_macros = { version = "0.1.0", path = "macros" }
 
-
 [features]
 default = []
-
 rt_tokio = ["sqlx/runtime-tokio-native-tls"]
 rt_async-std = ["sqlx/runtime-async-std-native-tls"]
-
 db_postgres = ["sqlx/postgres"]
 db_mysql = ["sqlx/mysql"]
 db_sqlite = ["sqlx/sqlite"]
