--- a/sample/Cargo.toml
+++ b/sample/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-qjack = { version = "0.1", features = ["rt_tokio", "db_postgres"], path = ".." }
+qjack = { version = "0.1", features = ["rt_tokio", "db_postgres"] }
 tokio = { version = "1", features = ["macros"] }
