--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,6 @@ rt_async-std = ["sqlx/runtime-async-std-native-tls"]
 db_postgres = ["sqlx/postgres"]
 db_mysql = ["sqlx/mysql"]
 db_sqlite = ["sqlx/sqlite"]
-##### PUBLISH #####
-# default = []
-#####  DEBUG  #####
-default = ["rt_tokio", "db_postgres"]
+
+##### DEBUG #####
+# default = ["rt_tokio", "db_postgres"]
